# slurp

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
src/: lib.rs
